# breast_cancer_ml

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
modules/: dataset.py
notebooks/: 01-Business_Understanding.ipynb  02-Data_understanding.ipynb
notebooks/script/: 01-Business_Understanding.py  02-Data_Understanding.py
