[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "modules"
version = "0.0.1"
description = "Develop a machine learning model to accurately classify breast cancer cases as malignant or benign."
authors = [
  { name = "Faraz Yazdanibiuki" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["modules"]
include = ["pyproject.toml", "modules/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["modules"]
force-sort-within-sections = true

